--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "css-modules": "^0.3.0",
+    "date-fns": "^2.30.0",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-hash-link": "^2.4.3",
@@ -50,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
+    "@types/numeral": "^2.0.2",
     "@types/react-router-hash-link": "^2.4.6",
     "sass": "^1.64.2",
     "typescript-plugin-css-modules": "^5.0.1"
