--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
+    "antd": "^5.9.2",
     "css-modules": "^0.3.0",
     "date-fns": "^2.30.0",
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
