--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.5",
     "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.2",
+    "@mui/material": "^5.14.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -23,9 +24,11 @@
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.0",
     "swiper": "^10.3.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -57,6 +60,7 @@
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
     "@types/numeral": "^2.0.2",
+    "@types/react-burger-menu": "^2.8.4",
     "@types/react-router-hash-link": "^2.4.6",
     "sass": "^1.64.2",
     "typescript-plugin-css-modules": "^5.0.1"
